--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,45 +5,36 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-node:
+  test:
     runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        service: 
+          [
+            "services/node/api-node",
+            "services/react/client-react",
+            "services/go/api-golang",
+          ]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
-      - name: Setup Node.js environment
+      - name: Setup Node.js
+        if: startsWith(matrix.service, 'services/node/') || startsWith(matrix.service, 'services/react/') 
         uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
         with:
-          node-version-file: services/node/api-node/package.json
+          node-version-file: "${{ matrix.service }}/package.json"
           cache: npm
-          cache-dependency-path: services/node/api-node/package-lock.json
-
-      - name: Install task
-        uses: supplypike/setup-bin@1fafb085795af4a3f183502f3a9dffa8f7b83217 # v5.0.0
-        with:
-          uri: "https://github.com/go-task/task/releases/download/v3.48.0/task_linux_amd64.tar.gz"
-          name: task
-          version: v3.48.0
-
-      - name: Install node dependancies
-        working-directory: services/node/api-node
-        run: task install-ci
-
-      - name: Run Tests
-        working-directory: services/node/api-node
-        run: task test
-
-  test-go:
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+          cache-dependency-path: "${{ matrix.service }}/package-lock.json"
 
       - name: Setup golang
+        if: startsWith(matrix.service, 'services/go/')
         uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6.2.0
         with:
-          go-version-file: services/go/api-golang/go.mod
-          cache-dependency-path: services/go/api-golang/go.sum
+          go-version-file: "${{ matrix.service }}/go.mod"
+          cache-dependency-path: "${{ matrix.service }}/go.sum"
 
       - name: Install task
         uses: supplypike/setup-bin@1fafb085795af4a3f183502f3a9dffa8f7b83217 # v5.0.0
@@ -52,10 +43,10 @@ jobs:
           name: task
           version: v3.48.0
 
-      - name: Install golang dependancies
-        working-directory: services/go/api-golang
+      - name: Install dependancies
+        working-directory: ${{ matrix.service }}
         run: task install-ci
 
       - name: Run Tests
-        working-directory: services/go/api-golang
+        working-directory: ${{ matrix.service }}
         run: task test
