--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,18 +5,29 @@ on:
   workflow_dispatch:
 
 jobs:
+  filter:
+    runs-on: ubuntu-24.04
+    outputs:
+      services: ${{ steps.filter.outputs.changes }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - name: Filter
+        id: filter
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          filters: .github/utils/file-filters.yaml
+
   test:
     runs-on: ubuntu-24.04
+    needs: filter
     strategy:
       fail-fast: false
       matrix:
-        service: 
-          [
-            "services/node/api-node",
-            "services/react/client-react",
-            "services/go/api-golang",
-            "services/python/load-generator-python",
-          ]
+        service: ${{ fromJson(needs.filter.outputs.services) }}
 
     steps:
       - name: Checkout code
