--- a/.github/workflows/test/Taskfile.yaml
+++ b/.github/workflows/test/Taskfile.yaml
@@ -1,5 +1,9 @@
 version: "3"
 
+# env:
+#   GITHUB_TOKEN:
+#     sh: gh auth token
+
 tasks:
   trigger-workflow:
     desc: Trigger GitHub Actions workflow using act
@@ -7,6 +11,8 @@ tasks:
       - |
         act workflow_dispatch \
           --container-architecture linux/amd64 \
+          # -s GITHUB_TOKEN="{{.GITHUB_TOKEN}}" \
+          -e {{.PWD}}/event.json \
           -P ubuntu-24.04=ghcr.io/catthehacker/ubuntu:act-24.04 \
           --directory ../../.. \
           -W .github/workflows/test.yaml
