--- a/.github/workflows/test/Taskfile.yaml
+++ b/.github/workflows/test/Taskfile.yaml
@@ -1,8 +1,8 @@
 version: "3"
 
-# env:
-#   GITHUB_TOKEN:
-#     sh: gh auth token
+env:
+  GITHUB_TOKEN:
+    sh: gh auth token 2>/dev/null || echo ""
 
 tasks:
   trigger-workflow:
@@ -11,8 +11,8 @@ tasks:
       - |
         act workflow_dispatch \
           --container-architecture linux/amd64 \
-          # -s GITHUB_TOKEN="{{.GITHUB_TOKEN}}" \
-          -e {{.PWD}}/event.json \
+          -s GITHUB_TOKEN="{{.GITHUB_TOKEN}}" \
+          -e {{.TASKFILE_DIR}}/event.json \
           -P ubuntu-24.04=ghcr.io/catthehacker/ubuntu:act-24.04 \
           --directory ../../.. \
           -W .github/workflows/test.yaml
