--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,15 @@
 ---
 name: Run Tests
 
-on: 
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - services/**
+      - .github/workflows/test.yaml
+
+  pull_request: 
   workflow_dispatch:
 
 jobs:
