--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -27,6 +27,9 @@ on:
         required: false
         type: string
 
+permissions:
+  packages: write
+
 jobs:
   filter:
     runs-on: ubuntu-24.04
