--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -122,7 +122,7 @@ jobs:
         with:
           context: ${{ matrix.service }}
           push: ${{ !env.ACT }}
-          tags: ${{ steps.image-tag.outputs.image_tag }}
+          tags: "ghcr.io/${{ steps.image-tag.outputs.image_tag }}"
           platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
